Changes to Unauthenticated Access of courses
- Changed wording of footer in courseware
- Added footer to about page referenced to "Explore Course" button to make the course content "Click-Wrapped"

--- a/lms/templates/courseware/course_about.html
+++ b/lms/templates/courseware/course_about.html
@@ -207,7 +207,7 @@
           </a>
           % if sneakpeek_allowed and not regularly_registered:
             <a href="#" class="course_sneakpeek"</a>
-              <span class="sneakpeek">${_("Explore Course")}</span>
+              <span class="sneakpeek" title="${_("By exploring the course, you are agreeing to our Terms of Service. Please read them carefully.")}">${_("Explore Course")} *</span>
             </a>
           % endif
           <div id="register_error"></div>
@@ -251,6 +251,13 @@
       <div class="inner-wrapper">
         ${get_course_about_section(course, "overview")}
       </div>
+      % if sneakpeek_allowed and not regularly_registered:
+        <section class="unauth-tos" id="unauth-tos">* 
+          ${_("By exploring the course, you are agreeing to our")}
+          <a href="${marketing_link('TOS')}"><strong>${_("Terms of Service")}</strong></a>.
+          ${_("Please read them carefully.")}
+        </section>
+      % endif
     </section>
 
     % if not self.carnegie_theme_enabled():
@@ -329,10 +336,8 @@
             </section>
           </section>
         %endif
-
       </section>
     % endif
-
   </section>
 </section>
 
