--- a/lms/templates/courseware/courseware.html
+++ b/lms/templates/courseware/courseware.html
@@ -194,8 +194,9 @@ ${fragment.foot_html()}
   </div>
   % if course and user.is_authenticated() and not UserProfile.has_registered(user):
     <section class="unauth-tos">
-      ${_("By exploring and using these course materials, you are implicitly agreeing to our")}
-      <a href="${marketing_link('TOS')}">${_("Terms of Service and Honor Code")}</a> .
+      ${_("By using our site, you are agreeing to our")}
+      <a href="${marketing_link('TOS')}">${_("Terms of Service")}</a> .
+      ${_("Please read them carefully.")}
     </section>
   % endif
 </section>
